# Vital-Track

./: README.md  REAMDE.md
FE/: .eslintrc.js  App.jsx  app.json  index.js  package-lock.json  package.json
FE/android/: build.gradle  settings.gradle
FE/android/app/: build.gradle  google-services.json
FE/ios/: Podfile
FE/ios/VitalTrack/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
FE/ios/VitalTrack.xcodeproj/: project.pbxproj
FE/ios/VitalTrackTests/: VitalTrackTests.m
FE/src/screen/: BottomTab.jsx  ConnectDeviceScreen.jsx  EditProfile.jsx  HealthData.jsx  HomeScreen.jsx  Login.jsx  Relatives.jsx  RequestScreen.jsx  SignUp.jsx  SignUpSecond.jsx  Tracking.jsx  UserProfile.jsx  YourProfile.jsx
FE/src/styles/: DevicesList.jsx  styles.jsx
FE/src/utils/: DeviceContext.js  FirebaseConfig.js  api.js  gps.js  notification.js
VitalTrack-espidf/: CMakeLists.txt  README.md
VitalTrack-espidf/components/ble_service/: CMakeLists.txt  ble.c  ble.h
VitalTrack-espidf/components/gps_ATGM336H/: CMakeLists.txt  gps.c  gps.h
VitalTrack-espidf/components/i2c/: CMakeLists.txt  i2c-easy.c  i2c-easy.h
VitalTrack-espidf/components/max30102/: CMakeLists.txt  max30102.c  max30102.h
VitalTrack-espidf/components/modem/: CMakeLists.txt
VitalTrack-espidf/components/mpu9250/: CMakeLists.txt  ahrs.c  algorithm.c  calibrate.c  mpu9250.c
VitalTrack-espidf/components/mpu9250/include/: ahrs.h  algorithm.h  mpu9250.h
VitalTrack-espidf/main/: CMakeLists.txt  certificate.pem  main.c
backend/: Dockerfile  docker  docker-compose.yaml  pom.xml
(+110 files in other folders)
